--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <div class="mae">
         <div class="filha">
             <p>Quiz  <br> Ce me conhece amor?</p>
-            <button><a href="index2.html">Start</a></button>
+            <button><a href="quiz.html">Start</a></button>
         </div>
     </div>
 </body>
